# Rust-X11

./: Cargo.toml  LICENSE  Makefile  index.html
doc/: search-index.js
doc/X11/: index.html  stability.html  stability.json  struct.Connection.html  struct.Coordinate.html  struct.RectangularSize.html  struct.RequestDelay.html  struct.RequestError.html  struct.Screen.html  struct.Setup.html  struct.Window.html  trait.Cookie.html  trait.Reply.html  type.WindowInt.html
doc/X11/Connection_Error/: index.html  type.ConnectionError.html
doc/X11/Connection_Status/: index.html  type.ConnectionStatus.html
doc/X11/Input/: index.html  struct.Keycode.html  type.KeycodeInt.html
doc/X11/Screen_Setup/: index.html  struct.Items.html  struct.ScreenSetup.html
doc/X11/Window_Attribute/: index.html  static.back_pixel.html  static.back_pixmap.html  static.backing_pixel.html  static.backing_planes.html  static.backing_store.html  static.bit_gravity.html  static.border_pixel.html  static.border_pixmap.html  static.colormap.html  static.cursor.html  static.dont_propagate.html  static.event.html  static.event_mask.html  static.override_reddirect.html  static.save_under.html  static.win_gravity.html  struct.WindowAttributeSet.html  struct.WindowMainAttributeSet.html  struct.WindowSubAttributeSet.html  type.WindowAttributeInt.html  type.WindowMainAttributeInt.html
doc/X11/Window_Children/: fn.make_request.html  index.html  (+4 more)
lib/: syntax_extensions.rs
lib/new_type/: Cargo.toml
lib/refined_type/: Cargo.toml
lib/syntax_extensions/: Cargo.toml
src/: X11.rs  input.rs  lib.rs  xcb.rs
(+233 files in other folders)
