[package]

name = "Rust-X11"
version = "0.0.1"
authors = ["Robert Murray McMahon <robert.murray.mcmahon@gmail.com>"]

[lib]

name = "X11"
path = "src/X11.rs"
doc = true
crate-type = ["rlib"]

[dependencies.syntax_extensions]

path = "lib/syntax_extensions"

[dependencies.new_type]

path = "lib/new_type"

[dependencies.refined_type]

path = "lib/refined_type"
